--- a/src/page/home/home.css
+++ b/src/page/home/home.css
@@ -5,7 +5,8 @@
   overflow: hidden;
   min-width: 100vw;
   min-height: 100vh;
-  position: relative;
+  position: absolute;
+  z-index: -1;
   background: linear-gradient(45deg, #6cbdaa, #8bd6ea);
 }
 
@@ -45,5 +46,7 @@
   border-radius: 100%;
   background: radial-gradient(circle at center, #6cbdaa 80%, transparent 80%);
 
-  /* background: radial-gradient(circle at center, #005683 40%, transparent 80%); */
+}
+.logo {
+  width:30%;
 }
